--- a/WpfAppCommunityMVVM/WpfAppCommunityMVVM.csproj
+++ b/WpfAppCommunityMVVM/WpfAppCommunityMVVM.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
   </ItemGroup>
 
 </Project>
