Create Project with  Fluent Validation  with MVVM

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /.vs
 /WpfAppCommunityMVVM/bin/Debug/net9.0-windows
 /WpfAppCommunityMVVM/obj
+/WpfAppMVVMFluentValidation/bin/Debug/net9.0-windows
+/WpfAppMVVMFluentValidation/obj
