--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /WpfAppCommunityMVVM/obj
 /WpfAppMVVMFluentValidation/bin/Debug/net9.0-windows
 /WpfAppMVVMFluentValidation/obj
+/BlazorMvvmToolkit
